--- a/index.Rmd
+++ b/index.Rmd
@@ -1,10 +1,24 @@
-# Redesigning methods curricula for reproducibility
+---
+title: "Redesigning methods curricula for reproducibility"
+author: "Dale Barr, Heather Cleland Woods, Lisa DeBruine, Rebecca Lai, Phil McAleer, Shanon McNee, Emily Nordmann, Helena Paterson, Niamh Stack"
+---
+
+```{r opts, echo = FALSE}
+#suppress the warnings and other messages from showing in the knitted file.
+knitr::opts_chunk$set(
+  fig.width  = 8, 
+  fig.height = 5, 
+  fig.path   = 'images/',
+  echo       = TRUE, 
+  warning    = FALSE, 
+  message    = FALSE,
+  cache      = TRUE
+)
+```
 
 SIPS2019 workshop  
 Location: Amalia in Engels  
 Day/time: Sunday 13.45 - 17.15
-
-*Session leaders:* Dale Barr, Heather Cleland Woods, Lisa DeBruine, Rebecca Lai, Phil McAleer, Shanon McNee, Emily Nordmann, Helena Paterson, Niamh Stack
 
 
 At Glasgow our PsyTeachR teaching team has successfully made the transition to teaching R across all undergraduate and postgraduate levels. In this workshop we will share our experiences, insights, and teaching materials. Our curriculum now emphasises certain essential ‘data science’ graduate skills that have been overlooked in traditional approaches to teaching, including programming skills, data visualisation, data wrangling and reproducible reports. Students learn about probability and inference through data simulation as well as by working with real datasets. We have also instituted regular coursework across all levels, so that students build their skills through practical experience. We will discuss the challenges associated with implementing this new approach, including staff re-training, supporting student learning through online help sessions, and computer-assisted assessment to handle large volumes of coursework. The workshop is aimed at those interested in making the transition to teaching reproducible research in R at their own institutions, although we also would welcome participation from institutions where R is already a core part of the curriculum.
