--- a/index.Rmd
+++ b/index.Rmd
@@ -20,17 +20,22 @@ SIPS2019 workshop
 Location: Amalia in Engels  
 Day/time: Sunday 13.45 - 17.15
 
+<div style="max-width: 25%; float: right;"> 
+```{r psyteachr, echo = FALSE}
+knitr::include_graphics("images/psyTeachR-hex.png")
+```
+</div>
 
 At Glasgow our PsyTeachR teaching team has successfully made the transition to teaching R across all undergraduate and postgraduate levels. In this workshop we will share our experiences, insights, and teaching materials. Our curriculum now emphasises certain essential ‘data science’ graduate skills that have been overlooked in traditional approaches to teaching, including programming skills, data visualisation, data wrangling and reproducible reports. Students learn about probability and inference through data simulation as well as by working with real datasets. We have also instituted regular coursework across all levels, so that students build their skills through practical experience. We will discuss the challenges associated with implementing this new approach, including staff re-training, supporting student learning through online help sessions, and computer-assisted assessment to handle large volumes of coursework. The workshop is aimed at those interested in making the transition to teaching reproducible research in R at their own institutions, although we also would welcome participation from institutions where R is already a core part of the curriculum.
 
 ## Schedule
 
 13:45 - 14:00 Welcome  
-14:00 - 14:20 Introduction (Dale)  
-14:20 - 14:50 First years / pre-honours (Heather & Phil)  
+14:00 - 14:20 [Introduction](01_intro.html)  
+14:20 - 14:50 [Responsible Research Methods v2.0: The Next Generation](02_prehonours.html)  
 14:50 - 15:00 Q & A / Break  
-15:00 - 15:30 Student experiences (Rebecca & Shannon)  
-15:30 - 15:45 Short courses / diverse skill levels (Helena & Emily)  
-15:45 - 16:00 Tools for generating materials, reports, assessment etc. (Lisa)  
+15:00 - 15:30 [“Psych students just can’t code”: Challenge Accepted](03_students.html)  
+15:30 - 15:45 [Short courses / diverse skill levels](04_short_courses.html)  
+15:45 - 16:00 [Tools for teaching](05_tools.html)  
 16:00 - 17:00 Breakout sessions  
 17:00 - 17:15 Closing discussion
