Front page table

--- a/03_students.Rmd
+++ b/03_students.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "“Psych students just can’t code”: Challenge Accepted"
+title: "“Psych students just can’t code”: CHALLENGE ACCEPTED"
 author: "Rebecca Lai, Shannon McNee"
 ---
 
