--- a/01_intro.Rmd
+++ b/01_intro.Rmd
@@ -1,4 +1,6 @@
 ---
-title: "Introduction"
+title: "Upgrade your curriculum for reproducibility"
 author: "Dale Barr"
 ---
+
+The traditional research methods curriculum in psychology is failing to produce researchers with the skills needed to work reproducibly and transparently. Researchers need to know not only how to extract insights from data and communicate them to others, but also how to document every step of the analysis process. Moreover, they need technical skills that scale up to meet the challenges of real-world datasets, which can be noisy, large, and inconsistent. We can deliver these skills to students by teaching them how to code. Students who learn to code go on to become more competent, independent, and confident researchers. 
