--- a/index.Rmd
+++ b/index.Rmd
@@ -40,9 +40,9 @@ At Glasgow our PsyTeachR teaching team has successfully made the transition to t
 | 14:50 - 15:00 | **Q & A / Break** | 
 | 15:00 - 15:30 | **“Psych students just can’t code”: CHALLENGE ACCEPTED** | 
 |                |There is an internalised belief that it is not possible to teach psychology students to code. Rebecca and Shannon challenge this belief through discussing their own personal experience of moving from SPSS to R in the middle of their undergraduate degrees, as well as their experience of supporting the next generation of psychologists to develop data skills for reproducible science.| 
-| 15:30 - 15:45 | *Short courses / diverse skill levels* | 
-| 15:45 - 16:00 | **[Tools for teaching](05_tools.html)**  | 
-|               | R can be used for more than just stats. You can use it for generating course materials, creating and grading multiple-choice tests, computer-assisted assessment, personalised exam feedback, and student websites. Shiny apps are also a powerful way to demonstrate statistical concepts. But R definitely isn’t the only tool for reproducible research. We’ll also discuss other tools for teaching reproducible research skills, such as the OSF, git, and GitHub. | 
+| 15:30 - 15:45 | **Short courses / diverse skill levels** | 
+| 15:45 - 16:00 | **Tools for teaching**  | 
+|               | R can be used for more than just stats. You can use it for generating course materials, creating and grading multiple-choice tests, computer-assisted assessment, personalised exam feedback, and student websites. Shiny apps are also a powerful way to demonstrate statistical concepts. But R definitely isn’t the only tool for reproducible research. We’ll also discuss other tools for teaching reproducible research skills, such as the OSF, git, and GitHub. ([resources](05_tools.html)) | 
 | 16:00 - 17:00 | **Breakout sessions** | 
 |               | We'll break into groups to discuss problems and solutions around specific topics of interest, such as teaching assistant experiences, assessment, methods change for a single course, teaching first- and second-years, masters programmes, staff training, tech stuff, and anything else you want to discuss. | 
 | 17:00 - 17:15 | **Closing discussion** |
