changed is the enemy to are the enemy

--- a/04_short_courses.Rmd
+++ b/04_short_courses.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "When time and diversity is the enemy: short courses with diverse student skills"
+title: "When time and diversity are the enemy: short courses with diverse student skills"
 author: "Helena Paterson, Emily Nordmann"
 ---
 
