--- a/05_tools.Rmd
+++ b/05_tools.Rmd
@@ -3,7 +3,7 @@ title: "Tools for teaching"
 author: "Lisa DeBruine"
 ---
 
-R can be used for more than just stats. You can use it for generating course materials, creating and grading multiple-choice tests, computer-assisted assessment, personalised exam feedback, and student websites. Shiny apps are also a powerful way to demonstrate statistical concepts. But R definitely isn't the only tool for reproducible research. We'll also discuss other tools for teaching reproducible research skills, such as the OSF, git, and GitHub.
+R can be used for more than just stats. You can use it for generating course materials, creating and grading multiple-choice tests, computer-assisted assessment, personalised exam feedback, and websites. Shiny apps are also a powerful way to demonstrate statistical concepts. But R definitely isn't the only tool for reproducible research. We'll also discuss other tools for teaching reproducible research skills, such as Slack, the OSF, git, and GitHub.
 
 <div style="max-width: 25%; float: right;"> 
 ```{r webex, echo = FALSE}
