--- a/index.Rmd
+++ b/index.Rmd
@@ -39,11 +39,11 @@ At Glasgow our PsyTeachR teaching team has successfully made the transition to t
 |               | In developing the next generation of Psychologists our goal as teachers is to ensure students leave our programs as responsible and open scientists versed and skilled in reproducible practices, regardless of their chosen career. After serious reflection we concluded a major review was required to rise to this challenge our field faces. Here we will outline how we redeveloped our research methods teaching from the ground up to immerse students in this goal from day one. We will demonstrate our tools and approach and at the same time highlight the importance of a supportive and inclusive community in shaping and developing a large and diverse student cohort. | 
 | 14:50 - 15:00 | **Q & A / Break** | 
 | 15:00 - 15:30 | **“Psych students just can’t code”: CHALLENGE ACCEPTED** | 
-|                |There is an internalised belief that it is not possible to teach psychology students to code. Rebecca and Shannon challenge this belief through discussing their own personal experience of moving from SPSS to R in the middle of their undergraduate degrees, as well as their experience of supporting the next generation of psychologists to develop data skills for reproducible science.| 
+|                |There is an internalised belief that it is not possible to teach psychology students to code. Rebecca and Shannon challenge this belief through discussing their own personal experience of moving from SPSS to R in the middle of their undergraduate degrees, as well as their experience of supporting the next generation of psychologists to develop data skills for reproducible science. ([PDF slides](presentations/students.pdf)/[PPT slides](presentations/students.pptx))| 
 | 15:30 - 15:45 | **Imaginary barriers to reproducibility: short courses with diverse students** | 
 |               |What happens when you don’t have the luxury of a 4-year long degree programme in which to nurture the development of reproducible practices and coding?  Short one-year programmes or single semester courses prove to be the ultimate test of the claim that time and a diverse cohort are the enemies of teaching reproducible methods.  We will talk about our experience of postgraduate taught programmes where students range from fashion designers to chemical engineers; and where graduates of our undergraduate courses sit along-side students who have never studied psychology or learned research methods.  Such diverse cohorts bring challenges but also give an opportunity to teach responsible and reproducible practices where it can be of great benefit. |
 | 15:45 - 16:00 | **Tools for teaching**  |  
-|               | R can be used for more than just stats. You can use it for generating course materials, creating and grading multiple-choice tests, computer-assisted assessment, personalised exam feedback, and websites. Shiny apps are also a powerful way to demonstrate statistical concepts. But R definitely isn't the only tool for reproducible research. We'll also discuss other tools for teaching reproducible research skills, such as Slack, the OSF, git, and GitHub. ([slides](presentations/tools.html)) | 
+|               | R can be used for more than just stats. You can use it for generating course materials, creating and grading multiple-choice tests, computer-assisted assessment, personalised exam feedback, and websites. Shiny apps are also a powerful way to demonstrate statistical concepts. But R definitely isn't the only tool for reproducible research. We'll also discuss other tools for teaching reproducible research skills, such as Slack, the OSF, git, and GitHub. ([HTML slides](presentations/tools.html)/[Rpres code](https://github.com/PsyTeachR/sips2019/tree/master/presentations)) | 
 | 16:00 - 17:00 | **Breakout sessions** | 
 |               | We'll break into groups to discuss problems and solutions around specific topics of interest, such as teaching assistant experiences, assessment, methods change for a single course, teaching first- and second-years, masters programmes, staff training, tech stuff, and anything else you want to discuss. | 
 | 17:00 - 17:15 | **Closing discussion** |
