the pheather show

--- a/index.Rmd
+++ b/index.Rmd
@@ -35,7 +35,7 @@ At Glasgow our PsyTeachR teaching team has successfully made the transition to t
 | 13:45 - 14:00 | **Welcome & Introductions** | 
 | 14:00 - 14:20 | **Upgrade your curriculum for reproducibility** ([HTML slides](http://talklab.psy.gla.ac.uk/barr_sips_2019/)) |
 |               | The traditional research methods curriculum in psychology is failing to produce researchers with the skills needed to work reproducibly and transparently. Researchers need to know not only how to extract insights from data and communicate them to others, but also how to document every step of the analysis process. Moreover, they need technical skills that scale up to meet the challenges of real-world datasets, which can be noisy, large, and inconsistent. We can deliver these skills to students by teaching them how to code. Students who learn to code go on to become more competent, independent, and confident researchers. |
-| 14:20 - 14:50 | **Responsible research methods v2.0: The next generation** | 
+| 14:20 - 14:50 | **Responsible research methods v2.0: The next generation** ([HTML slides](presentations/prehonours.html)) | 
 |               | In developing the next generation of Psychologists our goal as teachers is to ensure students leave our programs as responsible and open scientists versed and skilled in reproducible practices, regardless of their chosen career. After serious reflection we concluded a major review was required to rise to this challenge our field faces. Here we will outline how we redeveloped our research methods teaching from the ground up to immerse students in this goal from day one. We will demonstrate our tools and approach and at the same time highlight the importance of a supportive and inclusive community in shaping and developing a large and diverse student cohort. | 
 | 14:50 - 15:00 | **Q & A / Break** | 
 | 15:00 - 15:30 | **“Psych students just can’t code”: CHALLENGE ACCEPTED** ([PDF slides](presentations/students.pdf)/[PPT slides](presentations/students.pptx)) | 
