--- a/index.Rmd
+++ b/index.Rmd
@@ -30,6 +30,26 @@ At Glasgow our PsyTeachR teaching team has successfully made the transition to t
 
 ## [PsyTeachR Course Books](/books/)
 
+<style>
+  .booklogo img { width: 150px; }
+  .booklogo p { float: left; wifth: 150px; }
+</style>
+
+<div class="booklogo">
+
+[![](images/L1.png)](https://psyteachr.github.io/ug1-practical/)
+
+[![](images/L2.png)](https://psyteachr.github.io/ug2-practical/)
+
+[![](images/msc_conv.png)](https://psyteachr.github.io/msc-conv-f2f/)
+
+[![](images/msc_ds.png)](https://psyteachr.github.io/msc-data-skills/)
+
+[![](images/glossary.png)](https://psyteachr.github.io/glossary/)
+
+</div>
+
+<br style="clear: both;">
 
 ## Schedule
 
